--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -3,7 +3,7 @@ html {
   }
   
   body {
-    background: #2c2c2c;
+    background-image: url("../images/background.jpg");
   }
   
   h2 {
@@ -28,19 +28,19 @@ html {
   }
   
   progress[value]::-webkit-progress-value {
-    background-color: #a927f5;
+    background-color: #273cf5;
     transition: all 0.2s ease-out;
   }
   
   progress[value]::-moz-progress-bar {
-    background-color: #a927f5;
+    background-color: #273cf5;
     transition: all 0.2s ease-out;
   }
   
   button {
     font: inherit;
-    background: #ff0062;
-    border: 1px solid #ff0062;
+    background: #19406b;
+    border: 1px solid #14040a;
     color: white;
     padding: 1rem 2rem;
     border-radius: 6px;
@@ -54,8 +54,8 @@ html {
   
   button:hover,
   button:active {
-    background: #a927f5;
-    border-color: #a927f5;
+    background: #273cf5;
+    border-color: #273cf5;
   }
   
   #health-levels,
@@ -84,3 +84,14 @@ html {
     text-align: center;
     margin: 0 0.5rem;
   }
+
+img{
+    height: 181px;
+    width: 176px;
+}
+#enemy{
+    margin-left: 50%;
+}
+#player{
+    margin-right: 50%;
+}
