--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -3,7 +3,7 @@ html {
   }
   
   body {
-    background-image: url("../images/background.jpg");
+    background-image: url("https://scontent.fmnl17-1.fna.fbcdn.net/v/t39.30808-6/299183734_110384831779937_6946313752873872493_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=2VMBb6LPWkQAX9qTeNS&_nc_ht=scontent.fmnl17-1.fna&oh=00_AT8IJGQDbhRBKCL27us_PeT52gxPZbVQMgCAqIyCLs2UVw&oe=633A06A4");
   }
   
   h2 {
